css/style.css
/******************************/
/* Base styles and typography */
/******************************/

:root {
  --green-300: #70e000;
  --green-400: #38b000;

  --grey-050: #f5f7fa;
  --grey-100: #e4e7eb;
  --grey-200: #cbd2d9;
  --grey-300: #9aa5b1;
  --grey-400: #7b8794;
  --grey-500: #616e7c;
  --grey-600: #52606d;
  --grey-700: #3e4c59;
  --grey-800: #323f4b;
  --grey-900: #1f2933;
}

/***************/
/* Base styles */
/***************/

html {
  font-size: 62.5%;
  font-weight: 300;
  font-family: 'Roboto', Helvetica, Arial, sans-serif;
  line-height: 1.4;
  user-select: none;
}

body {
  display: flex;
  background-image: linear-gradient(236deg, #74ebd5, #acb6e5);
  justify-content: center;
  align-items: center;
  height: 100vh;
}

/**************/
/* Calculator */
/**************/

.calculator {
  box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
  border-radius: 0.8rem;
  overflow: hidden;
}

.calculator__display {
  height: 10rem;
  font-size: 2.2rem;
  color: var(--grey-050);
  background-color: var(--grey-900);
  text-align: right;
  padding: 1.8rem 2.2rem;
}

.calculator__display__result {
  color: var(--grey-300);
}

.calculator__keys {
  background: var(--grey-050);
  display: grid;
  font-size: 1.6rem;
  gap: 1.8rem;
  padding: 2.2rem;
  grid-template-columns: repeat(4, auto);
  grid-template-areas:
    'clear delete sound divide'
    'seven eight nine times'
    'four five six minus'
    'one two three plus'
    'zero point equal equal';
}

.button {
  min-width: 6.2rem;
  min-height: 6.2rem;
  border: none;
  border-radius: 1rem;
  background-color: var(--grey-050);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25), 0 2px 2px rgba(0, 0, 0, 0.2),
    0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.1),
    0 16px 16px rgba(0, 0, 0, 0.05);
}

.button.active {
  background-color: var(--grey-200);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3), 0 2px 2px rgba(0, 0, 0, 0.2),
    0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0),
    0 16px 16px rgba(0, 0, 0, 0);
}

.clear,
.delete,
.sound,
[data-type='operator'] {
  background-color: var(--grey-100);
}

.clear {
  grid-area: clear;
}

.delete {
  grid-area: delete;
}

.sound {
  grid-area: sound;
}

.sound.active {
  color: var(--green-300);
  background-color: var(--grey-900);
}

.plus {
  grid-area: plus;
}

.minus {
  grid-area: minus;
}

.times {
  grid-area: times;
}

.divide {
  grid-area: divide;
}

.one {
  grid-area: one;
}

.two {
  grid-area: two;
}

.three {
  grid-area: three;
}

.four {
  grid-area: four;
}

.five {
  grid-area: five;
}

.six {
  grid-area: six;
}

.seven {
  grid-area: seven;
}

.eight {
  grid-area: eight;
}

.nine {
  grid-area: nine;
}

.zero {
  grid-area: zero;
}

.point {
  grid-area: point;
}

.equal {
  grid-area: equal;
  background-color: var(--green-300);
}

.equal.active {
  background-color: var(--green-400);
}

